State in which including in a view works, data loading does not

--- a/src/resources/assets/sass/app.scss
+++ b/src/resources/assets/sass/app.scss
@@ -2,3 +2,12 @@
 @import "normalize.css";
 @import "skeleton.scss";
 
+#whoops-viewer {
+    padding: 2rem;
+}
+
+#whoops-table {
+    table-layout: fixed;
+    word-wrap: break-word;
+    width: 100%;
+}
