--- a/src/resources/assets/sass/app.scss
+++ b/src/resources/assets/sass/app.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "tomorrow-night-eighties.min.css";
 
 #lwt-viewer {
     font-size: 14px;
@@ -23,9 +24,9 @@
 }
 
 .lwt-whoops {
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-    0 3px 1px -2px rgba(0,0,0,0.12),
-    0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
     margin-bottom: 1rem;
     background-color: white;
 
@@ -62,17 +63,12 @@
     pre {
         margin: 0;
 
-        &.prepost {
-            background-color: #333333;
-            color: white;
-        }
-
-        &.errorline {
-            background-color: #004765;
-            color: white;
+        &.errorline * {
+            background-color: #004765 !important;
         }
     }
 }
+
 a.lwt-whoops {
     color: black;
     transition: transform 100ms ease-in-out;
@@ -87,6 +83,7 @@ a.lwt-whoops {
     padding: 1rem 0;
     display: flex;
 }
+
 .lwt-1col, .lwt-2col, .lwt-3col, .lwt-4col, .lwt-5col, .lwt-6col, .lwt-7col, .lwt-8col, .lwt-9col, .lwt-10col, .lwt-11col, .lwt-12col {
     padding: 0 1rem;
 }
@@ -94,36 +91,47 @@ a.lwt-whoops {
 .lwt-1col {
     width: 8.33%;
 }
+
 .lwt-2col {
     width: 16.67%;
 }
+
 .lwt-3col {
     width: 25%;
 }
+
 .lwt-4col {
     width: 33.33%;
 }
+
 .lwt-5col {
     width: 41.67%;
 }
+
 .lwt-6col {
     width: 50%;
 }
+
 .lwt-7col {
     width: 58.33%;
 }
+
 .lwt-8col {
     width: 66.67%;
 }
+
 .lwt-9col {
     width: 75%;
 }
+
 .lwt-10col {
     width: 83.33%;
 }
+
 .lwt-11col {
     width: 91.67%;
 }
+
 .lwt-12col {
     width: 100%;
 }
