--- a/src/resources/assets/sass/app.scss
+++ b/src/resources/assets/sass/app.scss
@@ -17,9 +17,22 @@
         background-color: rgba(255, 255, 255, 0.9);
         width: 100%;
         padding: 5px;
-        border: 1px solid #f2f2f2;
+        border: 1px solid #ccc;
         border-radius: 2px;
         height: 3rem;
+    }
+
+    table {
+        border-spacing: 0;
+        border-collapse: collapse;
+
+        tr {
+            border-bottom: 1px solid #ccc;
+        }
+
+        td {
+            padding: 0.7rem 1rem;
+        }
     }
 
     #viewer {
