--- a/src/resources/assets/sass/app.scss
+++ b/src/resources/assets/sass/app.scss
@@ -3,8 +3,13 @@
 
 #lwt {
     @import "toggle";
+    @import "headings";
+    @import "trace";
+    @import "grid";
 
+    font-size: 14px;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
     * {
         box-sizing: border-box;
     }
@@ -19,7 +24,8 @@
         padding: 5px;
         border: 1px solid #ccc;
         border-radius: 2px;
-        height: 3rem;
+        height: 3em;
+        font-size: 110%;
     }
 
     table {
@@ -31,13 +37,13 @@
         }
 
         td {
-            padding: 0.7rem 1rem;
+            padding: 0.7em 1em;
         }
     }
 
     #viewer {
         font-size: 14px;
-        padding: 1rem;
+        padding: 1em;
     }
 
     #status-filter {
@@ -47,8 +53,8 @@
 
     #header {
         font-weight: bold;
-        font-size: 1.2rem;
-        margin-bottom: 0rem;
+        font-size: 1.2em;
+        margin-bottom: 0em;
 
         .col1, .col2 {
             display: flex;
@@ -61,7 +67,7 @@
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.12),
         0 1px 5px 0 rgba(0, 0, 0, 0.2);
-        margin-bottom: 1rem;
+        margin-bottom: 1em;
         background-color: white;
 
         .ellipsis {
@@ -72,13 +78,13 @@
         }
 
         .exception {
-            font-size: 0.8rem;
+            font-size: 1em;
         }
 
         .error {
             font-weight: bold;
-            font-size: 1rem;
-            margin: 0.5rem 0;
+            font-size: 1.1em;
+            margin: 0.5em 0;
         }
 
         .col1, .col2 {
@@ -108,7 +114,7 @@
 
         .tabs {
             position: relative;
-            padding: 0 1rem;
+            padding: 0 1em;
 
             &::after {
                 content: "";
@@ -126,13 +132,16 @@
             min-width: 150px;
             border: none;
             outline: none;
-            padding: 1rem;
+            padding: 1em;
             cursor: pointer;
             border-radius: 10px 10px 0 0;
             background-color: #f5f5f5;
+            line-height: 1em;
+            font-size: 1em;
+            text-transform: none;
 
             &:not(:first-of-type) {
-                margin-left: 0.5rem;
+                margin-left: 0.5em;
             }
 
             &:hover {
@@ -149,70 +158,14 @@
 
         .tab-content {
             display: none;
-            padding: 1rem;
+            padding: 1em;
 
             &.active {
                 display: block;
             }
         }
 
-        #trace-tab {
-            #app-only {
-                outline: none;
-                border: none;
-                background: none;
-                padding: 0.5rem 0.7rem;
-                border-radius: 5px;
-                background-color: #f0f0f0;
-                cursor: pointer;
 
-                &.active {
-                    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
-                    background-color: #fff;
-                }
-            }
-        }
-
-        .trace-spot {
-            .open-spot {
-                width: 100%;
-                outline: none;
-                border: none;
-                border-bottom: 1px solid black;
-                padding: 1rem;
-                background-color: transparent;
-                cursor: pointer;
-                text-align: left;
-                &:hover, &.active {
-                    background-color: #f5f5f5;
-                }
-
-                &.active + .trace-context {
-                    margin-bottom: 1rem;
-                }
-
-                span {
-                    background-color: #333333;
-                    color: white;
-                    border-radius: 5px;
-                    padding: 0 5px;
-                    text-align: center;
-                    line-height: 30px;
-                    display: inline-block;
-                    min-width: 30px;
-                    height: 30px;
-                    margin-right: 1rem;
-                }
-            }
-
-            .trace-context {
-                overflow: hidden;
-                max-height: 0;
-                transition: max-height 200ms ease-in-out;
-                padding: 0;
-                margin: 0;
-            }
-        }
     }
 
     a.whoops {
@@ -222,63 +175,5 @@
             color: black;
             transform: scale(1.01);
         }
-    }
-
-    .row {
-        margin-bottom: 1rem;
-        padding: 1rem 0;
-        display: flex;
-    }
-
-    .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
-        padding: 0 1rem;
-    }
-
-    .col1 {
-        width: 8.33%;
-    }
-
-    .col2 {
-        width: 16.67%;
-    }
-
-    .col3 {
-        width: 25%;
-    }
-
-    .col4 {
-        width: 33.33%;
-    }
-
-    .col5 {
-        width: 41.67%;
-    }
-
-    .col6 {
-        width: 50%;
-    }
-
-    .col7 {
-        width: 58.33%;
-    }
-
-    .col8 {
-        width: 66.67%;
-    }
-
-    .col9 {
-        width: 75%;
-    }
-
-    .col10 {
-        width: 83.33%;
-    }
-
-    .col11 {
-        width: 91.67%;
-    }
-
-    .col12 {
-        width: 100%;
     }
 }
