--- a/src/resources/assets/sass/toggle.scss
+++ b/src/resources/assets/sass/toggle.scss
@@ -27,6 +27,8 @@
     background-color: #ccc;
     transition: 300ms;
     border-radius: 2rem;
+    height: 100%;
+    width: 100%;
 }
 
 .slider:before {
@@ -39,6 +41,9 @@
     background-color: white;
     transition: 300ms;
     border-radius: 50%;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 input:checked + .slider {
